<resources>
    <string-array name="types">
        <item>Cafe</item>
        <item>Atm</item>
        <item>Pub</item>
        <item>Gym</item>
        <item>Supermarket</item>
        <item>Hotel</item>
        <item>Motel</item>
    </string-array><string-array name="search_radius">
        <item>50m</item>
        <item>100m</item>
        <item>500m</item>
        <item>1000m</item>
        <item>2000m</item>
    </string-array><string name="action_auto">Auto</string>
    <string name="action_exit">Exit</string>
    <string name="action_findshop">Nearby</string>
    <string name="action_map">Map</string>
    <string name="action_distance">Distance</string>
    <string name="action_refresh">Refresh</string>
    <string name="findplace_title">Findplace title</string>
    <string name="place">Place</string>
    <string name="radius">Radius</string>
    <string name="option">Option</string>
    <string name="findplace_hint">School</string><string name="search">Search</string><string name="go_hint">xxx The Terrace</string>
    
    
    <string name="app_name">RouteTrack</string>
    
    
    <string name="setting_auto_on">Auto complete OFF</string>
    <string name="setting_auto_off">Auto complete ON</string>
    <string name="action_check">Check</string>

</resources>