<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/locationlogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/findplace_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/place"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationlogo"
        android:text="@string/place"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/placesSpinner"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/place"
        android:background="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/radius"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placesSpinner"
        android:text="@string/radius"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/radiusSpinner"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/radius"
        android:background="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiusSpinner"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/option"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude"
        android:text="@string/option"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/searchOption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/option"
        android:hint="@string/findplace_hint"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/searchbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="fill"
            android:onClick="findplacesearch"
            android:text="@string/search"
            android:textColor="@color/black" />
    </TableRow>

</RelativeLayout>